Make footer email more visible (text-secondary instead of text-muted)

--- a/public/index.html
+++ b/public/index.html
@@ -803,7 +803,7 @@
     </div>
     <div class="footer-bottom">
       <span>&copy; 2025 ClawChat. Open source software.</span>
-      <span><a href="mailto:hey@clawchat.dev" style="color: var(--text-muted); transition: color 0.2s;" onmouseover="this.style.color='var(--accent)'" onmouseout="this.style.color='var(--text-muted)'">hey@clawchat.dev</a></span>
+      <span><a href="mailto:hey@clawchat.dev" style="color: var(--text-secondary); transition: color 0.2s;" onmouseover="this.style.color='var(--accent)'" onmouseout="this.style.color='var(--text-secondary)'">hey@clawchat.dev</a></span>
       <span>Built with ⚡ using Electron</span>
     </div>
   </div>
