Add built by credit to footer

--- a/public/index.html
+++ b/public/index.html
@@ -804,7 +804,7 @@
     <div class="footer-bottom">
       <span>&copy; 2025 ClawChat. Open source software.</span>
       <span><a href="mailto:hey@clawchat.dev" style="color: var(--text-secondary); transition: color 0.2s;" onmouseover="this.style.color='var(--accent)'" onmouseout="this.style.color='var(--text-secondary)'">hey@clawchat.dev</a></span>
-      <span>Built with ⚡ using Electron</span>
+      <span>Built with ❤️ by <a href="https://github.com/ngmaloney" target="_blank" style="color: var(--text-secondary); transition: color 0.2s;" onmouseover="this.style.color='var(--accent)'" onmouseout="this.style.color='var(--text-secondary)'">@ngmaloney</a> at <a href="https://www.thegnar.com" target="_blank" style="color: var(--text-secondary); transition: color 0.2s;" onmouseover="this.style.color='var(--accent)'" onmouseout="this.style.color='var(--text-secondary)'">The Gnar Company</a></span>
     </div>
   </div>
 </footer>
