feat: add SSH tunnel feature to features grid and privacy section

--- a/public/index.html
+++ b/public/index.html
@@ -713,6 +713,17 @@
         <h3>Self-Hosted Ready</h3>
         <p>Connect to your own OpenClaw gateway. All credentials stored locally — never sent to third parties. Full control over your data and infrastructure.</p>
       </div>
+      <div class="feature-card reveal" style="grid-column: 1 / -1;">
+        <div style="display:flex; align-items:flex-start; gap: 24px; flex-wrap: wrap;">
+          <div>
+            <div class="feature-icon">🔐</div>
+          </div>
+          <div>
+            <h3>Built-in SSH Tunneling</h3>
+            <p>Connect to a remote gateway over SSH directly from the app — no terminal setup required. ClawChat opens the tunnel for you, binds to a local port, and connects transparently. Your gateway never needs to be on a public interface. Key-based auth, TOFU host verification, and automatic teardown on disconnect.</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
@@ -730,6 +741,7 @@
           <li><span class="check">🏠</span> Self-hosted gateway support</li>
           <li><span class="check">✈️</span> Air-gapped mode for isolated networks</li>
           <li><span class="check">🔒</span> No telemetry, no tracking, no analytics</li>
+          <li><span class="check">🔐</span> Built-in SSH tunnel — gateway never needs a public interface</li>
           <li><span class="check">🌐</span> Open source — verify for yourself</li>
         </ul>
         <div style="margin-top: 32px;">
