--- a/public/cli.html
+++ b/public/cli.html
@@ -591,7 +591,7 @@
     <ul class="nav-links" id="navLinks">
       <li><a href="/">Desktop</a></li>
       <li><a href="/cli.html" class="active">CLI</a></li>
-      <li><a href="/#features">Features</a></li>
+      <li><a href="#features">Features</a></li>
       <li><a href="https://github.com/ngmaloney/clawchat-cli">GitHub</a></li>
       <li><a href="https://github.com/ngmaloney/clawchat-cli/releases" class="btn btn-primary nav-cta">Download</a></li>
     </ul>
