--- a/public/index.html
+++ b/public/index.html
@@ -602,6 +602,7 @@
     <ul class="nav-links" id="navLinks">
       <li><a href="/" class="active">Desktop</a></li>
       <li><a href="/cli.html">CLI</a></li>
+      <li><a href="#features">Features</a></li>
       <li><a href="https://github.com/ngmaloney/clawchat">GitHub</a></li>
       <li><a href="https://github.com/ngmaloney/clawchat/releases" class="btn btn-primary nav-cta">Download</a></li>
     </ul>
